--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="vieport" content="width=device-width, initial-scale="">
+    <link href="style.css" rel="stylesheet">
     <title> handlename of portforio </title>
   </head>
   <body>
