--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <meta name="vieport" content="width=device-width, initial-scale="">
+    <meta name="viewport" content="width=device-width, initial-scale="">
     <link href="style.css" rel="stylesheet">
     <title> handlename of portforio </title>
   </head>
