--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>HOGEHOGE</h1>
-  <img src="dog.jpg">
+<img src="dog.jpg" width="280">
     
     <h2>About</h2>
     <p>
