--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <td>表彰、受賞歴、メディア掲載記事などあれば</td>
       </tr>
     </table>
-    <h3>youtube recommend video</h3>
+    <h3>Youtube recommend video</h3>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/B1PvIbzXbDk?si=tl2uNSawh1n09Xcg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     
