--- a/index.html
+++ b/index.html
@@ -87,9 +87,13 @@
     <h3>Youtube recommend video</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/B1PvIbzXbDk?si=tl2uNSawh1n09Xcg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-  <!-- <h3>Open Processing</h3>
+  <h3>Open Processing</h3>
 <iframe src="https://openprocessing.org/sketch/2127817/embed/" width="400" height="400"></iframe>    
-  -->
+
+  <h3> Super Mario</h3>
+
+    <iframe src="https://chromedino.com/mario/" frameborder="0" scrolling="no" width="100%" height="100%" loading="lazy"></iframe>
+<style type="text/css">iframe { position: absolute; width: 100%; height: 100%; z-index: 999; }</style>
 
   </body>
 </html>
