--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
   <h3>Open Processing</h3>
 <iframe src="https://openprocessing.org/sketch/2127817/embed/" width="400" height="400"></iframe>    
 
-  <h3> Super Mario</h3>
+  <!-- <h3> Super Mario</h3>
 
     <iframe src="https://chromedino.com/mario/" frameborder="0" scrolling="no" width="100%" height="100%" loading="lazy"></iframe>
 <style type="text/css">iframe { position: absolute; width: 100%; height: 100%; z-index: 999; }</style>
-
+--->
   </body>
 </html>
